--- a/main.htm
+++ b/main.htm
@@ -81,9 +81,9 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.
+    <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
+        My primary interests seem to lie in complex analysis and machine learning. I plan to graduate with a BA in Spring 2020 and study mathematics
+        in graduate school.
     </p>
   </div>
 
