--- a/home.htm
+++ b/home.htm
@@ -13,6 +13,7 @@
     <a href="#home" class="w3-bar-item w3-button"><b>Sean</b> Grate</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
+      <a href="#research" class="w3-bar-item w3-button">Research</a>
       <a href="#projects" class="w3-bar-item w3-button">Projects</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
@@ -31,15 +32,15 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-  <!-- Project Section -->
-  <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
+  <!-- Research Section -->
+  <div class="w3-container w3-padding-32" id="research">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h3>
   </div>
 
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Resampling Point Clouds</div>
+        <div class="w3-display-topleft w3-black w3-padding">Point Cloud Resampling</div>
         <img src="/w3images/house5.jpg" alt="House" style="width:100%">
       </div>
     </div>
@@ -61,6 +62,11 @@
         <img src="/w3images/house4.jpg" alt="House" style="width:100%">
       </div>
     </div>
+  </div>
+
+  <!-- Research Section -->
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
   </div>
 
   <div class="w3-row-padding">
