--- a/home.htm
+++ b/home.htm
@@ -23,11 +23,8 @@
 </div>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="sean_grate.jpg" alt="Architecture" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
-  </div>
+<header class="w3-display-container w3-content w3-wide" style="max-width:200;" id="home">
+  <img class="w3-image" src="images/sean_grate.jpg" alt="me" width="200" height="240">
 </header>
 
 <!-- Page content -->
