Fixed image alignment issue.

--- a/home.htm
+++ b/home.htm
@@ -82,7 +82,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <img class="w3-image" src="images/sean_grate.jpg" alt="me" width="200" height="240">
+    <img class="w3-image" src="images/sean_grate.jpg" alt="me" width="200" height="240" align="left">
     <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
         My primary interests seem to lie in complex analysis and machine learning. I plan to graduate in Spring 2020 and study mathematics
         in graduate school.
