Added some more images.

--- a/home.htm
+++ b/home.htm
@@ -68,13 +68,13 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Visualizing Algebraic Surfaces</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:99%">
+        <img src="images/27lines.jpg" alt="27lines" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Generating Minecraft Worlds</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:99%">
+        <img src="/images/minecraft_snapshot.png" alt="minecraft" style="width:99%">
       </div>
     </div>
   </div>
