--- a/home.htm
+++ b/home.htm
@@ -68,13 +68,13 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Visualizing Algebraic Surfaces</div>
-        <img src="images/27lines.jpg" alt="27lines" style="width:99%">
+        <img src="images/27Lines.jpg" alt="Clebsh 27 lines" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Generating Minecraft Worlds</div>
-        <img src="/images/minecraft_snapshot.png" alt="minecraft" style="width:99%">
+        <img src="/images/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
       </div>
     </div>
   </div>
@@ -82,7 +82,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <img class="w3-image" src="images/sean_grate.jpg" alt="me" width="200" height="240" align="left">
+    <img class="w3-image" src="images/sean_grate.jpg" alt="me" width="200" height="240" align="left" margin-right="16">
     <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
         My primary interests seem to lie in complex analysis and machine learning. I plan to graduate in Spring 2020 and study mathematics
         in graduate school.
