Rescaled Clebsh image.

--- a/home.htm
+++ b/home.htm
@@ -68,13 +68,13 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Visualizing Algebraic Surfaces</div>
-        <img src="/images/27Lines.jpg" alt="Clebsh 27 lines" style="width:438px; height:292px">
+        <img src="/images/27Lines.jpg" alt="Clebsh 27 lines" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Generating Minecraft Worlds</div>
-        <img src="/images/minecraft_snapshot.png" alt="minecraft world" style="width:438px; height:292px">
+        <img src="/images/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
       </div>
     </div>
   </div>
