--- a/home.htm
+++ b/home.htm
@@ -68,7 +68,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Visualizing Algebraic Surfaces</div>
-        <img src="/images/27Lines.jpg" alt="Clebsh 27 lines" style="width:99%">
+        <img src="/images/27Lines.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
