--- a/home.htm
+++ b/home.htm
@@ -16,8 +16,6 @@
       <a href="#research" class="w3-bar-item w3-button">Research</a>
       <a href="#projects" class="w3-bar-item w3-button">Projects</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-      <a href="#cv" class="w3-bar-item w3-button">CV</a>
     </div>
   </div>
 </div>
@@ -85,7 +83,7 @@
     <img class="w3-image" src="images/sean_grate.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 0px" align="left">
     <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
         My primary interests seem to lie in complex analysis and machine learning. I plan to graduate in Spring 2020 and study mathematics
-        in graduate school.
+        in graduate school. A copy of my CV can be found <a href="/misc/CV.pdf">here<a> along with contact information.
     </p>
   </div>
 
