--- a/home.htm
+++ b/home.htm
@@ -65,7 +65,9 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <a class="w3-button w3-black" href="/visualizations.htm">Visualizing Algebraic Surfaces</a>
+        <div class="w3-display-topleft w3-black w3-padding">
+          <a class="w3-button w3-black" href="/visualizations.htm">Visualizing Algebraic Surfaces</a>
+        </div>
         <img src="/images/27Lines.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
       </div>
     </div>
