Added buttons for links to projects and research pages.

--- a/home.htm
+++ b/home.htm
@@ -33,26 +33,32 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Point Cloud Resampling</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">
+          <a class="w3-button w3-black" href="/resampling.htm">Point Cloud Resampling</a>
+        </div>
+        <img src="/w3images/house5.jpg" alt="resampling" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Discrete Heisenberg Group</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
+          <div class="w3-display-topleft w3-black">
+            <a class="w3-button w3-black" href="/heisenberg.htm">Discrete Heisenberg Group</a>
+          </div>
+        <img src="/w3images/house2.jpg" alt="heisenberg" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">TA Assignments</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
+          <div class="w3-display-topleft w3-black w3-padding">
+            <a class="w3-button w3-black" href="/assignments.htm">TA Assignments</a>
+          </div>
+        <img src="/w3images/house3.jpg" alt="assignments" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Flight Route Estimation</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:100%">
+        <img src="/w3images/house4.jpg" alt="flight route" style="width:100%">
       </div>
     </div>
   </div>
@@ -65,7 +71,7 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">
+        <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="/visualizations.htm">Visualizing Algebraic Surfaces</a>
         </div>
         <img src="/images/27Lines.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
@@ -73,7 +79,9 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Generating Minecraft Worlds</div>
+        <div class="w3-display-topleft w3-black">
+          <a class="w3-button w3-black" href="/minecraft.htm">Generating Minecraft Worlds</a>
+        </div>
         <img src="/images/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
       </div>
     </div>
