Fixed button issue for resampling.

--- a/home.htm
+++ b/home.htm
@@ -13,9 +13,9 @@
     <a href="#home" class="w3-bar-item w3-button"><b>Sean</b> Grate</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#research" class="w3-bar-item w3-button">Research</a>
       <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
     </div>
   </div>
 </div>
@@ -43,7 +43,7 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">
+        <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="/resampling.htm">Point Cloud Resampling</a>
         </div>
         <img src="/w3images/house5.jpg" alt="resampling" style="width:100%">
