Fixed another button issue (padding).

--- a/home.htm
+++ b/home.htm
@@ -59,7 +59,7 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-          <div class="w3-display-topleft w3-black w3-padding">
+          <div class="w3-display-topleft w3-black">
             <a class="w3-button w3-black" href="/assignments.htm">TA Assignments</a>
           </div>
         <img src="/w3images/house3.jpg" alt="assignments" style="width:100%">
