Moved image on visualizations page.

--- a/visualizations.htm
+++ b/visualizations.htm
@@ -25,7 +25,10 @@
 <div>
   <div class="w3-container w3-padding-32" id="27 Lines on a Cubic Surface">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on Clebsh Surface</h3>
-    <img class="w3-image" src="/images/27Lines.jpg" alt="27 Lines">
+    <figure>
+      <img class="w3-image" src="/images/27Lines.jpg" alt="27 Lines" style="padding: 0px 16px 0px 0px; width:50%; height:50%" align="middle">
+      <figcaption>27 lines on the Clebsh cubic surface.</figcaption>
+    </figure>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. With the help of postdoc
       <a href="https://nathanfieldsteel.github.io/">Nathan Fieldsteel</a>, we managed to 3D print the
