Added some photos and more descriptions

--- a/visualizations.htm
+++ b/visualizations.htm
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 <body>
 
@@ -24,10 +26,10 @@
 <!--Main body-->
 <div>
   <div class="w3-container w3-padding-32" id="27 Lines on a Cubic Surface">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on Clebsh Surface</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
     <figure>
-      <img class="w3-image" src="/images/27Lines.jpg" alt="27 Lines" style="padding: 0px 16px 0px 0px; width:50%; height:50%" align="middle">
-      <figcaption>27 lines on the Clebsh cubic surface.</figcaption>
+      <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 0px 16px 0px 0px; width:50%; height:50%" align="middle">
+      <figcaption>27 lines on the Clebsh surface.</figcaption>
     </figure>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. With the help of postdoc
@@ -36,6 +38,20 @@
       generate the surface and <a href="https://www.blender.org/">Blender</a> to make it look a little more refined, we used the
       University of Kentucky Math Lab's <a href="https://formlabs.com/3d-printers/form-2/">Form 2</a> 3D printer to print it. After a couple
       of test prints, we finally got a fantastic model to hold and display.
+    </p>
+  </div>
+
+  <div class="w3-container w3-padding-32" id="Calculus III">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Calculus III</h3>
+    <figure>
+      <img class="w3-image" src="/images/saddle1.jpg" alt="saddle1" style="padding: 0px 16px 0px 0px; width:50%; height:50%" align="middle">
+      <figcaption>Saddle surface.</figcaption>
+    </figure>
+    <p>For many students, the higher dimensionality of multivariate calculus can be a challenge to handle.
+        By creating interactive and tangible objects related to some of the objects, the goal is to make the
+        concepts more accessible and to provide some intuition for students. Because much of Calculus III begins
+        in \( \mathbb{R}^3 \), many of the surfaces can actually be 3D-printed. Photos are courtesy of
+        <a href="https://math.osu.edu/people/osborne.475">Christina Osborne</a>.
     </p>
   </div>
 </div>
