--- a/home.htm
+++ b/home.htm
@@ -28,10 +28,10 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <img class="w3-image" src="/images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 0px" align="left">
+    <img class="w3-image" src="/images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px" align="left">
     <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
         My primary interests seem to lie in complex analysis and machine learning. I do research with the <a href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
-        and also in <a href="http://cs.uky.edu/~jacobs/">Nathan Jacobs</a> computer vision lab. I plan to graduate in Spring 2020 and study mathematics
+        and also in <a href="http://cs.uky.edu/~jacobs/">Nathan Jacobs'</a> computer vision lab. I plan to graduate in Spring 2020 and study mathematics
         in graduate school. A copy of my CV can be found <a href="/misc/CV.pdf">here<a> along with my contact information.
     </p>
   </div>
