--- a/visualizations.htm
+++ b/visualizations.htm
@@ -28,7 +28,9 @@
   <div class="w3-container w3-padding-32" id="27 Lines on a Cubic Surface">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
     <figure>
-      <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 0px 16px 0px 0px; width:50%; height:50%" align="middle">
+      <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 0px 16px 0px 16px; width:30%; height:50%" align="left">
+      <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 0px 16px 0px 16px; width:30%; height:50%" align="middle">
+      <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 0px 16px 0px 16px; width:30%; height:50%" align="right">
       <figcaption>27 lines on the Clebsh surface.</figcaption>
     </figure>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
@@ -44,8 +46,14 @@
   <div class="w3-container w3-padding-32" id="Calculus III">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Calculus III</h3>
     <figure>
-      <img class="w3-image" src="/images/saddle1.jpg" alt="saddle1" style="padding: 0px 16px 0px 0px; width:50%; height:50%" align="middle">
+      <img class="w3-image" src="/images/saddle1.jpg" alt="saddle1" style="padding: 0px 16px 0px 16px; width:50%; height:50%" align="left">
+      <img class="w3-image" src="/images/saddle2.jpg" alt="saddle2" style="padding: 0px 16px 0px 16px; width:50%; height:50%" align="right">
       <figcaption>Saddle surface.</figcaption>
+    </figure>
+    <figure>
+      <img class="w3-image" src="/images/saddle1.jpg" alt="paraboloid1.jpg" style="padding: 0px 16px 0px 16px; width:50%; height:50%" align="left">
+      <img class="w3-image" src="/images/saddle3.jpg" alt="paraboloid1.jpg" style="padding: 0px 16px 0px 16px; width:50%; height:50%" align="right">
+      <figcaption>Paraboloid surface.</figcaption>
     </figure>
     <p>For many students, the higher dimensionality of multivariate calculus can be a challenge to handle.
         By creating interactive and tangible objects related to some of the objects, the goal is to make the
