Added links to subpages for visualizations page.

--- a/visualizations.htm
+++ b/visualizations.htm
@@ -16,7 +16,8 @@
     <a href="/home.htm" class="w3-bar-item w3-button"><b>Go back</b></a>
 
     <div class="w3-right w3-hide-small">
-      <h>Visualizing Algebraic Surfaces</h>
+      <a href="#27 Lines" class="w3-bar-item w3-button">27 Lines</a>
+      <a href="#Calculus III" class="w3-bar-item w3-button">Calculus III</a>
     </div>
   </div>
 </div>
@@ -25,7 +26,7 @@
 
 <!--Main body-->
 <div>
-  <div class="w3-container w3-padding-32" id="27 Lines on a Cubic Surface">
+  <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
     <figure>
       <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px; width:30%; height:30%" align="left">
