--- a/visualizations.htm
+++ b/visualizations.htm
@@ -29,9 +29,9 @@
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
     <figure>
-      <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px; width:30%; height:30%" align="left">
-      <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px; width:30%; height:30%" align="middle">
-      <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px; width:30%; height:30%" align="right">
+      <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px; width:30%; height:30%; float:left">
+      <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px; width:30%; height:30%; float:left">
+      <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px; width:30%; height:30%; float:left">
       <figcaption>27 lines on the Clebsh surface.</figcaption>
     </figure>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
