--- a/visualizations.htm
+++ b/visualizations.htm
@@ -32,7 +32,7 @@
       <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px; width:256px; height:256px; float:left">
       <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px; width:256px; height:256px; float:left">
       <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px; width:256px; height:256px; float:left">
-      <figcaption>27 lines on the Clebsh surface.</figcaption>
+      <figcaption><br>27 lines on the Clebsh surface</figcaption>
     </figure>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. With the help of postdoc
@@ -47,14 +47,14 @@
   <div class="w3-container w3-padding-32" id="Calculus III">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Calculus III</h3>
     <figure>
-      <img class="w3-image" src="/images/saddle1.jpg" alt="saddle 1" style="padding: 16px; width:50%; height:50%" align="left">
-      <img class="w3-image" src="/images/saddle2.jpg" alt="saddle 2" style="padding: 16px; width:50%; height:50%" align="right">
-      <figcaption>Saddle surface.</figcaption>
+      <img class="w3-image" src="/images/saddle1.jpg" alt="saddle 1" style="padding: 16px; width:256px; height:256px; float:left">
+      <img class="w3-image" src="/images/saddle2.jpg" alt="saddle 2" style="padding: 16px; width:256px; height:256px; float:left">
+      <figcaption><br>Saddle surface</figcaption>
     </figure>
     <figure>
-      <img class="w3-image" src="/images/paraboloid1.jpg" alt="paraboloid 1" style="padding: 16px; width:50%; height:50%" align="left">
-      <img class="w3-image" src="/images/paraboloid2.jpg" alt="paraboloid 2" style="padding: 16px; width:50%; height:50%" align="right">
-      <figcaption>Paraboloid surface.</figcaption>
+      <img class="w3-image" src="/images/paraboloid1.jpg" alt="paraboloid 1" style="padding: 16px; width:256px; height:256px; float:left">
+      <img class="w3-image" src="/images/paraboloid2.jpg" alt="paraboloid 2" style="padding: 16px; width:256px; height:256px; float:left">
+      <figcaption><br>Paraboloid surface</figcaption>
     </figure>
     <p>For many students, the higher dimensionality of multivariate calculus can be a challenge to handle.
         By creating interactive and tangible objects related to some of the objects, the goal is to make the
