--- a/visualizations.htm
+++ b/visualizations.htm
@@ -30,13 +30,13 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
     <div class="row">
       <div class="column", style="width:33%; float:left">
-        <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px; width:256px; height:256px; float:left">
+        <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px">
       </div>
       <div class="column", style="width:33%; float:left">
-        <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px; width:256px; height:256px; float:left">
+        <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px">
       </div>
       <div class="column", style="width:33%; float:left">
-        <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px; width:256px; height:256px; float:left">
+        <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px">
       </div>
       <p><br>27 lines on the Clebsh surface</p>
     </div>
