--- a/visualizations.htm
+++ b/visualizations.htm
@@ -28,18 +28,12 @@
 <div>
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
-    <div class="row">
-      <div class="column", style="width:33%; float:left">
-        <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px">
-      </div>
-      <div class="column", style="width:33%; float:left">
-        <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px">
-      </div>
-      <div class="column", style="width:33%; float:left">
-        <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px">
-      </div>
-      <p><br>27 lines on the Clebsh surface</p>
+    <div style="column-count:3">
+      <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px">
+      <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px">
+      <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px">
     </div>
+    <p><br><i>27 lines on the Clebsh surface</i></p>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. With the help of postdoc
       <a href="https://nathanfieldsteel.github.io/">Nathan Fieldsteel</a>, we managed to 3D print the
