--- a/visualizations.htm
+++ b/visualizations.htm
@@ -28,7 +28,7 @@
 <div>
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
-    <div style="column-count:3">
+    <div style="column-count:3; column-width:33%">
       <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px">
       <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px">
       <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px">
