--- a/visualizations.htm
+++ b/visualizations.htm
@@ -7,6 +7,31 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  x[slideIndex-1].style.display = "block";
+}
+</script>
+
+<style>
+.slideshow {display:none;}
+</style>
+
+
 
 <body>
 
@@ -28,11 +53,13 @@
 <div>
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
-    <div style="column-count:3; column-width:33%">
-      <img class="w3-image" src="/images/clebsh1.jpg" alt="clebsh 1" style="padding: 16px">
-      <img class="w3-image" src="/images/clebsh2.jpg" alt="clebsh 2" style="padding: 16px">
-      <img class="w3-image" src="/images/clebsh3.jpg" alt="clebsh 3" style="padding: 16px">
-    </div>
+      <div class="w3-content w3-display-container">
+        <img class="slideshow" src="/images/clebsh1.jpg" alt="clebsh 1" style="width:100%">
+        <img class="slideshow" src="/images/clebsh2.jpg" alt="clebsh 2" style="width:100%">
+        <img class="slideshow" src="/images/clebsh3.jpg" alt="clebsh 3" style="width:100%">
+        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+      </div>
     <p><br><i>27 lines on the Clebsh surface</i></p>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. With the help of postdoc
