Added caption to slideshow.

--- a/visualizations.htm
+++ b/visualizations.htm
@@ -54,13 +54,21 @@ function showDivs(n) {
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
       <div class="w3-content w3-display-container">
-        <img class="slideshow" src="/images/clebsh1.jpg" alt="clebsh 1" style="width:100%">
-        <img class="slideshow" src="/images/clebsh2.jpg" alt="clebsh 2" style="width:100%">
-        <img class="slideshow" src="/images/clebsh3.jpg" alt="clebsh 3" style="width:100%">
+        <img class="slideshow" src="/images/clebsh1.jpg" alt="clebsh 1" style="width:100; max-width=300px">
+        <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
+          <i>27 lines on the Clebsh surface</i>
+        </div>
+        <img class="slideshow" src="/images/clebsh2.jpg" alt="clebsh 2" style="width:100; max-width=300px%">
+        <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
+          <i>27 lines on the Clebsh surface</i>
+        </div>
+        <img class="slideshow" src="/images/clebsh3.jpg" alt="clebsh 3" style="width:100%; max-width=300px">
+        <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
+          <i>27 lines on the Clebsh surface</i>
+        </div>
         <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
       </div>
-    <p><br><i>27 lines on the Clebsh surface</i></p>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. With the help of postdoc
       <a href="https://nathanfieldsteel.github.io/">Nathan Fieldsteel</a>, we managed to 3D print the
