--- a/visualizations.htm
+++ b/visualizations.htm
@@ -54,11 +54,11 @@ function showDivs(n) {
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
       <div class="w3-content w3-display-container">
-        <img class="slideshow" src="/images/clebsh1.jpg" alt="clebsh 1" style="width:100; max-width=300px">
+        <img class="slideshow" src="/images/clebsh1.jpg" alt="clebsh 1" style="width:100%; max-width=300px">
         <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
           <i>27 lines on the Clebsh surface</i>
         </div>
-        <img class="slideshow" src="/images/clebsh2.jpg" alt="clebsh 2" style="width:100; max-width=300px%">
+        <img class="slideshow" src="/images/clebsh2.jpg" alt="clebsh 2" style="width:100%; max-width=300px%">
         <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
           <i>27 lines on the Clebsh surface</i>
         </div>
