Fixed image sizing issue.

--- a/visualizations.htm
+++ b/visualizations.htm
@@ -58,7 +58,7 @@ function showDivs(n) {
         <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
           <i>27 lines on the Clebsh surface</i>
         </div>
-        <img class="slideshow" src="/images/clebsh2.jpg" alt="clebsh 2" style="width:100%; max-width=300px%">
+        <img class="slideshow" src="/images/clebsh2.jpg" alt="clebsh 2" style="width:100%; max-width=300px">
         <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
           <i>27 lines on the Clebsh surface</i>
         </div>
