--- a/visualizations.htm
+++ b/visualizations.htm
@@ -7,28 +7,13 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-<script>
-var slideIndex = 1;
-showDivs(slideIndex);
-
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("slideshow");
-  if (n > x.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  x[slideIndex-1].style.display = "block";
-}
-</script>
 
 <style>
-.slideshow {display:none;}
+.slideshow1 {display:none;}
+</style>
+
+<style>
+.slideshow2 {display:none;}
 </style>
 
 
@@ -53,24 +38,15 @@ function showDivs(n) {
 <div>
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
-      <div class="w3-content w3-display-container">
-        <img class="slideshow" src="/images/clebsh1.jpg" alt="clebsh 1" style="width:100%; max-width=300px">
-        <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
-          <i>27 lines on the Clebsh surface</i>
-        </div>
-        <img class="slideshow" src="/images/clebsh2.jpg" alt="clebsh 2" style="width:100%; max-width=300px">
-        <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
-          <i>27 lines on the Clebsh surface</i>
-        </div>
-        <img class="slideshow" src="/images/clebsh3.jpg" alt="clebsh 3" style="width:100%; max-width=300px">
-        <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-black">
-          <i>27 lines on the Clebsh surface</i>
-        </div>
-        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+      <div class="w3-content w3-display-container" style="max-width:300px">
+        <img class="slideshow1" src="./images/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
+        <img class="slideshow1" src="./images/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
+        <img class="slideshow1" src="./images/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
+        <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
+        <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
       </div>
     <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
-      that states that any smooth, cubic surface has 27 lines that lie on it. With the help of postdoc
+      that states that any smooth, cubic surface has 27 lines that lie on it. In collaboration with postdoc
       <a href="https://nathanfieldsteel.github.io/">Nathan Fieldsteel</a>, we managed to 3D print the
       <a href="https://en.wikipedia.org/wiki/Clebsch_surface">Clebsh surface</a>. Using <a href="https://www.sagemath.org/">Sage</a> to
       generate the surface and <a href="https://www.blender.org/">Blender</a> to make it look a little more refined, we used the
@@ -81,16 +57,14 @@ function showDivs(n) {
 
   <div class="w3-container w3-padding-32" id="Calculus III">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Calculus III</h3>
-    <figure>
-      <img class="w3-image" src="/images/saddle1.jpg" alt="saddle 1" style="padding: 16px; width:256px; height:256px; float:left">
-      <img class="w3-image" src="/images/saddle2.jpg" alt="saddle 2" style="padding: 16px; width:256px; height:256px; float:left">
-      <figcaption><br>Saddle surface</figcaption>
-    </figure>
-    <figure>
-      <img class="w3-image" src="/images/paraboloid1.jpg" alt="paraboloid 1" style="padding: 16px; width:256px; height:256px; float:left">
-      <img class="w3-image" src="/images/paraboloid2.jpg" alt="paraboloid 2" style="padding: 16px; width:256px; height:256px; float:left">
-      <figcaption><br>Paraboloid surface</figcaption>
-    </figure>
+    <div class="w3-content w3-display-container" style="max-width:270px">
+      <img class="slideshow2" src="./images/saddle1.jpg" alt="saddle 1" style="max-width:270px">
+      <img class="slideshow2" src="./images/saddle2.jpg" alt="saddle 2" style="max-width:270px">
+      <img class="slideshow2" src="./images/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
+      <img class="slideshow2" src="./images/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
+      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
+      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
+    </div>
     <p>For many students, the higher dimensionality of multivariate calculus can be a challenge to handle.
         By creating interactive and tangible objects related to some of the objects, the goal is to make the
         concepts more accessible and to provide some intuition for students. Because much of Calculus III begins
@@ -103,6 +77,29 @@ function showDivs(n) {
 </div>
 
 
+
+<script>
+var slideIndex = [1,1];
+/* Class the members of each slideshow group with different CSS classes */
+var slideId = ["slideshow1", "slideshow2"]
+showSlides(1, 0);
+showSlides(1, 1);
+
+function plusSlides(n, no) {
+  showSlides(slideIndex[no] += n, no);
+}
+
+function showSlides(n, no) {
+  var i;
+  var x = document.getElementsByClassName(slideId[no]);
+  if (n > x.length) {slideIndex[no] = 1}
+  if (n < 1) {slideIndex[no] = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  x[slideIndex[no]-1].style.display = "block";
+}
+</script>
 
 </body>
 
