--- a/home.htm
+++ b/home.htm
@@ -28,7 +28,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <img class="w3-image" src="/images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px" align="left">
+    <img class="w3-image" src="./images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px" align="left">
     <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
         My primary interests seem to lie in complex analysis and machine learning. I do research with the <a href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
         and also in <a href="http://cs.uky.edu/~jacobs/">Nathan Jacobs'</a> computer vision lab. I plan to graduate in Spring 2020 and study mathematics
@@ -69,7 +69,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Flight Route Estimation</div>
-        <img src="/w3images/house4.jpg" alt="flight route" style="width:100%">
+        <img src="./images/franklin_torch_flight.gif" alt="flight route" style="width:100%">
       </div>
     </div>
   </div>
@@ -85,7 +85,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="/visualizations.htm">Visualizing Algebraic Surfaces</a>
         </div>
-        <img src="/images/clebsh1.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
+        <img src="./images/clebsh1.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -93,7 +93,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="/minecraft.htm">Generating Minecraft Worlds</a>
         </div>
-        <img src="/images/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
+        <img src="./images/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
       </div>
     </div>
   </div>
