--- a/visualizations.htm
+++ b/visualizations.htm
@@ -23,7 +23,7 @@
 <!--Top navigation bar-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="/home.htm" class="w3-bar-item w3-button"><b>Go back</b></a>
+    <a href="./home.htm" class="w3-bar-item w3-button"><b>Go back</b></a>
 
     <div class="w3-right w3-hide-small">
       <a href="#27 Lines" class="w3-bar-item w3-button">27 Lines</a>
