--- a/visualizations.htm
+++ b/visualizations.htm
@@ -9,6 +9,17 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 <style>
+.weblink {
+    color:blue;
+    text-decoration:none;
+}
+
+.weblink:hover {
+    text-decoration:underline
+}
+</style>
+
+<style>
 .slideshow1 {display:none;}
 </style>
 
@@ -23,11 +34,11 @@
 <!--Top navigation bar-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="./home.htm" class="w3-bar-item w3-button"><b>Go back</b></a>
+    <a class="weblink" href="./home.htm" class="w3-bar-item w3-button"><b>Go back</b></a>
 
     <div class="w3-right w3-hide-small">
-      <a href="#27 Lines" class="w3-bar-item w3-button">27 Lines</a>
-      <a href="#Calculus III" class="w3-bar-item w3-button">Calculus III</a>
+      <a class="weblink" href="#27 Lines" class="w3-bar-item w3-button">27 Lines</a>
+      <a class="weblink" href="#Calculus III" class="w3-bar-item w3-button">Calculus III</a>
     </div>
   </div>
 </div>
@@ -45,12 +56,12 @@
         <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
         <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 0)">&#10095;</button>
       </div>
-    <p>In algebraic geometry, there is a remarkable <a href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
+    <p>In algebraic geometry, there is a remarkable <a class="weblink" href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. In collaboration with postdoc
-      <a href="https://nathanfieldsteel.github.io/">Nathan Fieldsteel</a>, we managed to 3D print the
-      <a href="https://en.wikipedia.org/wiki/Clebsch_surface">Clebsh surface</a>. Using <a href="https://www.sagemath.org/">Sage</a> to
-      generate the surface and <a href="https://www.blender.org/">Blender</a> to make it look a little more refined, we used the
-      University of Kentucky Math Lab's <a href="https://formlabs.com/3d-printers/form-2/">Form 2</a> 3D printer to print it. After a couple
+      <a class="weblink" href="https://nathanfieldsteel.github.io/">Nathan Fieldsteel</a>, we managed to 3D print the
+      <a class="weblink" href="https://en.wikipedia.org/wiki/Clebsch_surface">Clebsh surface</a>. Using <a class="weblink" href="https://www.sagemath.org/">Sage</a> to
+      generate the surface and <a class="weblink" href="https://www.blender.org/">Blender</a> to make it look a little more refined, we used the
+      University of Kentucky Math Lab's <a class="weblink" href="https://formlabs.com/3d-printers/form-2/">Form 2</a> 3D printer to print it. After a couple
       of test prints, we finally got a fantastic model to hold and display.
     </p>
   </div>
@@ -69,7 +80,7 @@
         By creating interactive and tangible objects related to some of the objects, the goal is to make the
         concepts more accessible and to provide some intuition for students. Because much of Calculus III begins
         in \( \mathbb{R}^3 \), many of the surfaces can actually be 3D-printed. Photos are courtesy of
-        <a href="https://math.osu.edu/people/osborne.475">Christina Osborne</a>.
+        <a class="weblink" href="https://math.osu.edu/people/osborne.475">Christina Osborne</a>.
     </p>
   </div>
 </div>
