Fixed small hyperlink display issue.

--- a/visualizations.htm
+++ b/visualizations.htm
@@ -34,11 +34,11 @@
 <!--Top navigation bar-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a class="weblink" href="./home.htm" class="w3-bar-item w3-button"><b>Go back</b></a>
+    <a href="./home.htm" class="w3-bar-item w3-button"><b>Go back</b></a>
 
     <div class="w3-right w3-hide-small">
-      <a class="weblink" href="#27 Lines" class="w3-bar-item w3-button">27 Lines</a>
-      <a class="weblink" href="#Calculus III" class="w3-bar-item w3-button">Calculus III</a>
+      <a href="#27 Lines" class="w3-bar-item w3-button">27 Lines</a>
+      <a href="#Calculus III" class="w3-bar-item w3-button">Calculus III</a>
     </div>
   </div>
 </div>
