--- a/home.htm
+++ b/home.htm
@@ -75,7 +75,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./assignments.htm">TA Assignments</a>
         </div>
-        <img src="/w3images/house3.jpg" alt="assignments" style="width:100%">
+        <img src="./images/assignments_graph.png" alt="assignments" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
