--- a/home.htm
+++ b/home.htm
@@ -39,7 +39,7 @@
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
     <img class="w3-image" src="./images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px; float:left">
     <p>I am a senior undergraduate at the University of Kentucky majoring in Mathematics with minors in Computer Science, History, and Classics.
         My primary interests seem to lie in complex analysis and machine learning. I do research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
@@ -50,7 +50,7 @@
 
   <!-- Research Section -->
   <div class="w3-container w3-padding-32" id="research">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h3>
+    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Research</h3>
   </div>
 
   <div class="w3-row-padding">
@@ -75,7 +75,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./assignments.htm">TA Assignments</a>
         </div>
-        <img src="./images/assignments_graph.png" alt="assignments" style="width:100%">
+        <img src="./images/assignments/assignments_graph.png" alt="assignments" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -83,14 +83,14 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./flightroute.htm">Flight Route Estimation</a>
         </div>
-        <img src="./images/franklin_torch_flight.gif" alt="flight route" style="width:100%">
+        <img src="./images/flightroute/franklin_torch_flight.gif" alt="flight route" style="width:100%">
       </div>
     </div>
   </div>
 
   <!-- Research Section -->
   <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
+    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Projects</h3>
   </div>
 
   <div class="w3-row-padding">
@@ -99,7 +99,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./visualizations.htm">Visualizing Algebraic Surfaces</a>
         </div>
-        <img src="./images/clebsh1.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
+        <img src="./images/visualizations/clebsh1.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -107,7 +107,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./minecraft.htm">Generating Minecraft Worlds</a>
         </div>
-        <img src="./images/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
+        <img src="./images/minecraft/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
       </div>
     </div>
   </div>
