--- a/visualizations.htm
+++ b/visualizations.htm
@@ -52,9 +52,9 @@
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
       <div class="w3-content w3-display-container" style="max-width:300px">
-        <img class="slideshow1" src="./images/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
-        <img class="slideshow1" src="./images/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
-        <img class="slideshow1" src="./images/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
+        <img class="slideshow1" src="./images/visualizations/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
+        <img class="slideshow1" src="./images/visualizations/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
+        <img class="slideshow1" src="./images/visualizations/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
         <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
         <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 0)">&#10095;</button>
       </div>
@@ -71,10 +71,10 @@
   <div class="w3-container w3-padding-32" id="Calculus III">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Calculus III</h3>
     <div class="w3-content w3-display-container" style="max-width:270px">
-      <img class="slideshow2" src="./images/saddle1.jpg" alt="saddle 1" style="max-width:270px">
-      <img class="slideshow2" src="./images/saddle2.jpg" alt="saddle 2" style="max-width:270px">
-      <img class="slideshow2" src="./images/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
-      <img class="slideshow2" src="./images/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
+      <img class="slideshow2" src="./images/visualizations/saddle1.jpg" alt="saddle 1" style="max-width:270px">
+      <img class="slideshow2" src="./images/visualizations/saddle2.jpg" alt="saddle 2" style="max-width:270px">
+      <img class="slideshow2" src="./images/visualizations/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
+      <img class="slideshow2" src="./images/visualizations/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
       <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
     </div>
