Renamed images and added images to slideshow on Minecraft page.

--- a/home.htm
+++ b/home.htm
@@ -107,7 +107,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="./minecraft.htm">Generating Minecraft Worlds</a>
         </div>
-        <img src="./images/minecraft/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
+        <img src="./images/minecraft/mountain overlook.png" alt="minecraft world" style="width:99%">
       </div>
     </div>
   </div>
