--- a/minecraft.htm
+++ b/minecraft.htm
@@ -59,13 +59,37 @@
            topology.
         </p>
 
-        <div class="w3-content w3-display-container" style="max-width:270px">
-          <img class="slideshow1" src="./images/saddle1.jpg" alt="saddle 1" style="max-width:270px">
-          <img class="slideshow1" src="./images/saddle2.jpg" alt="saddle 2" style="max-width:270px">
-          <img class="slideshow1" src="./images/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
-          <img class="slideshow1" src="./images/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
-          <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
-          <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
+        <div class="w3-content w3-display-container" style="max-width:75%; max-height:75%">
+            <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
+                <img src="./images/minecraft/world by height.png" alt="world by height" style="max-width:100%; max-height:100%">
+                <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A region of a world (colored by height)</div>
+            </div>
+            <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
+                <img src="./images/minecraft/world by block.png" alt="world by block" style="max-width:100%; max-height:100%">
+                <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A region of a world (colored by block ID)</div>
+            </div>
+            <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
+                <img src="./images/minecraft/village.png" alt="village" style="max-width:100%; max-height:100%">
+                <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A village (colored by block ID)</div>
+            </div>
+            <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
+                <img src="./images/minecraft/mountain overlook.png" alt="mountain overlook" style="max-width:100%; max-height:100%">
+                <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">View from a mountain (colored by height)</div>
+            </div>
+            <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
+                <img src="./images/minecraft/caves.png" alt="caves" style="max-width:100%; max-height:100%">
+                <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Underground cave systems (colored by height)</div>
+            </div>
+            <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
+                <img src="./images/minecraft/cave closeup.png" alt="cave closeup" style="max-width:100%; max-height:100%">
+                <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Closeup of a cave (colored by height)</div>
+            </div>
+            <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
+                <img src="./images/minecraft/cave ravine.png" alt="cave ravine" style="max-width:100%; max-height:100%">
+                <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Closeup of ravine (colored by height)</div>
+            </div>
+          <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
+          <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 0)">&#10095;</button>
         </div>
 
         <p>From machine learning, we will use a <a class="weblink" href="https://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf">
